<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.example.calculator.my_control.MyTextView
            android:id="@+id/myTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="395dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="395dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="151dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="57dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/myTextView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="219dp" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintVertical_bias="0.12">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_1"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="2"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/等于"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="4"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="3"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/回退"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="4"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/sub"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="1"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/mul"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="2"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/清空"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="3"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/point"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="3"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/div"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="3"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/add"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_4"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_6"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_5"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_7"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_8"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_9"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_2"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_3"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="2" />

        </androidx.gridlayout.widget.GridLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="695dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>